# codeswitch

./: Cargo.toml  LICENSE  README.md
shell/: bash  bash.sh
src/: main.rs
