[package]
name = "codeswitch"
version = "0.1.0"
authors = ["Jonathan Lebon <jonathan@jlebon.com>"]
description = "Easily switch between different codebases."
edition = "2018"

[dependencies]
clap = { version = "4", features = ["derive"] }
anstyle = "1"
byteorder = "1"
openat = "0.1"
dirs = "6"
glob = "0.3"
